<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        app:startIconTint="#000000"
        app:boxStrokeColor="#000000"
        app:endIconMode="clear_text"
        app:endIconTintMode="screen"
        android:textColorHint="#000"
        app:startIconDrawable="@drawable/email_icon"
        app:hintTextColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:fadingEdge="horizontal"
        android:backgroundTint="#808080">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/primary_button"
            android:inputType="textEmailAddress|textFilter"
            android:hint="@string/email_field"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:textColorHint="#000"
            android:textColor="#000"
            android:layout_margin="15dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/lock_icon"
        android:textColorHint="#000"
        app:endIconMode="password_toggle"
        app:endIconTint="#000000"
        app:startIconTint="#000000"
        app:boxStrokeColor="#000000"
        android:layout_marginTop="30dp"
        app:hintTextColor="#000"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPass"
            android:background="@drawable/primary_button"
            android:hint="@string/pass_field"
            android:inputType="textPassword"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeatPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/lock_icon"
        android:textColorHint="#000"
        app:endIconMode="password_toggle"
        app:endIconTint="#000000"
        app:startIconTint="#000000"
        app:boxStrokeColor="#000000"
        android:layout_marginTop="30dp"
        app:hintTextColor="#000"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerRepeatPass"
            android:background="@drawable/primary_button"
            android:hint="@string/pass_field"
            android:inputType="textPassword"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/secondary_button"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:text="@string/register" />

</LinearLayout>